2002-06-30  Jan Nieuwenhuizen  <janneke@gnu.org>

	* tex/lilyponddefs.tex: Define outputscale only once.

2002-06-29  Jan Nieuwenhuizen  <janneke@gnu.org>

	* configure.in: Require guile 1.4 or newer (was 1.3.4?).

2002-06-29  Han-Wen  <hanwen@cs.uu.nl>

	* lily/(phrasing-)slur-engraver.cc: remove slur{Begin|End}Attachment.

	* lily/separating-line-group-engraver.cc (acknowledge_grob):
	ignore grobs with no-spacing-rods set.

	* Documentation/user/tutorial.itely (Fine tuning a piece): more tut.

	* scm/grob-description.scm (all-grob-descriptions): sort list
	
2002-06-27  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/user/tutorial.itely (A piano excerpt): Bugfix:
	remove stray brace.

	* Documentation/topdocs/FAQ.texi (Installation): Add
	lilypond-devel list.  Add faq about font removal.  Fix faq about
	generating and running ./configure.

2002-06-26  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/chord-name.scm (chord::name->text): Workaround: clean markup
	text.

	* lily/text-item.cc (markup_text2molecule): Bugfix: raise only once.

	* input/test/ambitus.ly:
	* lily/ambitus-engraver.cc:
	* lily/ambitus.cc:
	* lily/include/ambitus.hh: New file.

	* GNUmakefile.in (local-clean): Also remove builddir-setup's symlinks.

2002-06-25  Juergen Reuter  <reuter@ipd.uka.de>

	* input/test/ambitus.ly, lily/ambitus-engraver.cc,
	lily/ambitus.cc, lily/include/ambitus.hh, ly/engraver-init.ly,
	scm/basic-properties.scm, scm/grob-description.scm,
	scm/grob-property-description.scm: Add support for ambitus.

2002-06-24  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/text-spanner.cc: add some props to interface (patch
	courtesy Chris J).

2002-06-24  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/text-spanner.cc (setup_pedal_bracket): Bugfix: only
	dereference valid Grob.

	* configure.in: Quoting fixes.

2002-06-24  Han-Wen  <hanwen@cs.uu.nl>

	* lily/grob-scheme.cc: new file

	* lily/break-substitution.cc: split up break substitution